--- a/app/src/main/res/layout/activity_enroll.xml
+++ b/app/src/main/res/layout/activity_enroll.xml
@@ -18,6 +18,7 @@
         android:layout_height="39dp"
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="60dp"
         android:background="#DB442B"
@@ -26,7 +27,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.985"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />
 
     <Button
         android:id="@+id/BtonCancelar"
@@ -34,6 +36,7 @@
         android:layout_height="39dp"
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="60dp"
         android:background="#DB442B"
@@ -42,10 +45,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />
 
     <TextView
-        android:id="@+id/CrearUsuario"
+        android:id="@+id/textMateria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -60,22 +64,53 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/crearUsuario2"
+        android:id="@+id/puntuacionView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="332dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:shadowColor="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@+id/spinnerProfesor"
+        app:layout_constraintTop_toBottomOf="@+id/textMateria" />
+
+    <TextView
+        android:id="@+id/descripcionView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:shadowColor="#FFFFFF"
+        android:text="@string/Comentario"
+        android:textColor="#000000"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/puntuacionView" />
+
+    <TextView
+        android:id="@+id/textDescripcion"
+        android:layout_width="319dp"
+        android:layout_height="270dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:shadowColor="#FFFFFF"
         android:text="@string/Descripcion"
         android:textColor="#000000"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/descripcionView" />
 
     <TextView
-        android:id="@+id/crearUsuario"
+        android:id="@+id/materiaView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
@@ -85,7 +120,19 @@
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/CrearUsuario"
+        app:layout_constraintStart_toEndOf="@+id/textMateria"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/spinnerProfesor"
+        android:layout_width="185dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/puntuacionView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textMateria" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
