--- a/app/src/main/res/layout/activity_Search.xml
+++ b/app/src/main/res/layout/activity_Search.xml
@@ -7,23 +7,23 @@
     tools:context=".ui.SignUp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Buscarpor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="240dp"
         android:layout_marginBottom="36dp"
         android:text="Buscar por:"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerBuscar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/BotonBuscar"
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginStart="4dp"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editTextBusqueda"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerBuscar" />
 
     <EditText
         android:id="@+id/editTextBusqueda"
@@ -48,20 +48,22 @@
         android:hint="ADOO"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/BotonBuscar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerBuscar" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerBuscar"
         android:layout_width="254dp"
         android:layout_height="27dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="77dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/BotonBuscar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/Buscarpor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
