--- a/app/src/main/res/layout/activity_Search_Marteria.xml
+++ b/app/src/main/res/layout/activity_Search_Marteria.xml
@@ -13,70 +13,72 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="76dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="Busqueda"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/materia1"
+        app:layout_constraintBottom_toTopOf="@+id/materiaB1"
         app:layout_constraintEnd_toStartOf="@+id/BotonBuscar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/BotonBuscar"
         android:layout_width="90dp"
         android:layout_height="45dp"
         android:layout_marginTop="76dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="47dp"
         android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/materia1"
+        app:layout_constraintBottom_toTopOf="@+id/materiaB1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/editTextBusqueda"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/materia1"
-        android:layout_width="241dp"
-        android:layout_height="99dp"
-        android:layout_marginTop="31dp"
-        android:layout_marginBottom="2dp"
-        android:text="Carrera Materia 1"
-        app:layout_constraintBottom_toTopOf="@+id/materia2"
+        android:id="@+id/materiaB1"
+        android:layout_width="244dp"
+        android:layout_height="98dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="26dp"
+        android:text="Materia 1"
+        app:layout_constraintBottom_toTopOf="@+id/materiaB2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextBusqueda" />
 
     <Button
-        android:id="@+id/materia2"
-        android:layout_width="243dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="31dp"
-        android:text="Carrera Materia 2"
-        app:layout_constraintBottom_toTopOf="@+id/materia3"
+        android:id="@+id/materiaB2"
+        android:layout_width="240dp"
+        android:layout_height="97dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="35dp"
+        android:text="Materia 2"
+        app:layout_constraintBottom_toTopOf="@+id/materiaB3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.558"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materia1" />
+        app:layout_constraintTop_toBottomOf="@+id/materiaB1" />
 
     <Button
-        android:id="@+id/materia3"
-        android:layout_width="245dp"
-        android:layout_height="95dp"
-        android:layout_marginStart="85dp"
+        android:id="@+id/materiaB3"
+        android:layout_width="240dp"
+        android:layout_height="97dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="2dp"
-        android:layout_marginEnd="82dp"
-        android:layout_marginBottom="200dp"
-        android:text="Carrera Materia 3"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="220dp"
+        android:text="Materia 3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materia2" />
+        app:layout_constraintTop_toBottomOf="@+id/materiaB2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
