--- a/app/src/main/res/layout/activity_Search_Profesor.xml
+++ b/app/src/main/res/layout/activity_Search_Profesor.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.SignUp">
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/profesor1"
         android:layout_width="243dp"
         android:layout_height="98dp"
         android:layout_marginStart="81dp"
@@ -15,65 +15,68 @@
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="13dp"
         android:text="Profesor 1"
-        app:layout_constraintBottom_toTopOf="@+id/button10"
+        app:layout_constraintBottom_toTopOf="@+id/profesor3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextBusqueda" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/profesor2"
         android:layout_width="243dp"
         android:layout_height="98dp"
         android:layout_marginStart="81dp"
         android:layout_marginTop="17dp"
         android:layout_marginEnd="136dp"
-        android:layout_marginBottom="274dp"
-        android:text="Profesor 3"
+        android:layout_marginBottom="200dp"
+        android:text="Profesor 2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button10" />
+        app:layout_constraintTop_toBottomOf="@+id/profesor3" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/profesor3"
         android:layout_width="243dp"
         android:layout_height="98dp"
         android:layout_marginStart="81dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="17dp"
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="17dp"
-        android:text="Profesor 2"
-        app:layout_constraintBottom_toTopOf="@+id/button11"
+        android:text="Profesor 3"
+        app:layout_constraintBottom_toTopOf="@+id/profesor2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
+        app:layout_constraintTop_toBottomOf="@+id/profesor1" />
 
     <EditText
         android:id="@+id/editTextBusqueda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="39dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Busqueda"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/profesor1"
+        app:layout_constraintEnd_toStartOf="@+id/BotonBuscar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/BotonBuscar"
         android:layout_width="90dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="96dp"
+        android:layout_marginEnd="80dp"
         android:layout_marginBottom="35dp"
         android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintBottom_toTopOf="@+id/profesor1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/editTextBusqueda"
