--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.SignUp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Buscarpor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
@@ -25,8 +25,8 @@
         android:layout_marginTop="24dp"
         android:text="@string/correo"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/Buscarpor"
+        app:layout_constraintTop_toBottomOf="@+id/Buscarpor" />
 
     <EditText
         android:id="@+id/editTextEmail"
