--- a/app/src/main/res/layout/activity_aviso_resena.xml
+++ b/app/src/main/res/layout/activity_aviso_resena.xml
@@ -9,19 +9,21 @@
         android:id="@+id/Señal_de_aviso"
         android:layout_width="104dp"
         android:layout_height="49dp"
-        android:text="@string/aviso"
+        android:layout_marginStart="153dp"
+        android:layout_marginBottom="9dp"
+        android:text="AVISO"
         android:textColor="#F80505"
         android:textSize="36sp"
-        tools:layout_editor_absoluteX="153dp"
-        tools:layout_editor_absoluteY="111dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imagen_aviso"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto_aviso"
-        android:layout_width="318dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="132dp"
+        android:layout_width="329dp"
+        android:layout_height="151dp"
+        android:layout_marginBottom="84dp"
         android:shadowColor="#000000"
-        android:text="@string/al_elegir_dejar_una_rese_a_declaras_que_has_cursado_la_asignatura_previamente_con_este_docente_si_es_asi_da_clic_en_continuar_de_lo_contrario_abstente_de_dejar_la_rese_a_recuerda_que_es_para_el_bien_de_todos"
+        android:text="al_elegir_dejar_una_rese_a_declaras_que_has_cursado_la_asignatura_previamente_con_este_docente_si_es_asi_da_clic_en_continuar_de_lo_contrario_abstente_de_dejar_la_rese_a_recuerda_que_es_para_el_bien_de_todos"
         android:textColor="#000000"
         android:textSize="18sp"
         android:visibility="visible"
