--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,23 +15,27 @@
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="@string/menu_rankingtons" />
         <item
             android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:icon="@drawable/ic_menu_share"
+            android:title="@string/menu_help" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Support">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
                 android:id="@+id/nav_send"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="@string/menu_settings" />
+            <item
+                android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
+                android:title="@string/menu_suggestions" />
+            <item
+                android:id="@+id/nav_error"
+                android:icon="@drawable/ic_menu_share"
+                android:title="@string/menu_error" />
         </menu>
     </item>
 
