--- a/app/src/main/res/layout/activity_atributos_calificar.xml
+++ b/app/src/main/res/layout/activity_atributos_calificar.xml
@@ -6,32 +6,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
-        android:id="@+id/Materia"
+        android:id="@+id/Materia_atributos_calificar"
         android:layout_width="124dp"
         android:layout_height="42dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="28dp"
         android:text="Materia:"
         android:textColor="#000000"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="119dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />
 
     <TextView
         android:id="@+id/materia"
         android:layout_width="124dp"
         android:layout_height="42dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="28dp"
         android:text="Docente:"
         android:textColor="#000000"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="189dp" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Materia_atributos_calificar" />
 
     <ScrollView
-        android:layout_width="374dp"
-        android:layout_height="291dp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="260dp">
+        android:id="@+id/scrollView2"
+        android:layout_width="370dp"
+        android:layout_height="331dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/materia">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -106,9 +113,19 @@
                 tools:layout_editor_absoluteX="85dp"
                 tools:layout_editor_absoluteY="495dp" />
 
+            <TextView
+                android:id="@+id/Comentario_calificar_atributos"
+                android:layout_width="match_parent"
+                android:layout_height="31dp"
+                android:text="Comentario:"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                tools:layout_editor_absoluteX="134dp"
+                tools:layout_editor_absoluteY="449dp" />
+
             <EditText
                 android:id="@+id/Comentarios_reseña"
-                android:layout_width="match_parent"
+                android:layout_width="348dp"
                 android:layout_height="183dp"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -121,26 +138,44 @@
 
     <Button
         android:id="@+id/boton_dejar_reseña"
-        android:layout_width="139dp"
-        android:layout_height="48dp"
+        android:layout_width="124dp"
+        android:layout_height="43dp"
+        android:layout_marginEnd="60dp"
         android:background="#00B0FF"
         android:text="Dejar reseña"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="219dp"
-        tools:layout_editor_absoluteY="610dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.493" />
 
     <Button
-        android:id="@+id/boton_volver_reseña"
-        android:layout_width="113dp"
-        android:layout_height="49dp"
+        android:id="@+id/boton_dejar_reseña2"
+        android:layout_width="124dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="60dp"
         android:background="#00B0FF"
         android:text="Volver"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="610dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/boton_dejar_reseña"
+        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.493" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
