--- a/app/src/main/res/layout/activity_resena_agregada.xml
+++ b/app/src/main/res/layout/activity_resena_agregada.xml
@@ -8,41 +8,61 @@
 
     <TextView
         android:id="@+id/Reseña_agregada"
-        android:layout_width="297dp"
-        android:layout_height="82dp"
+        android:layout_width="262dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="52dp"
         android:text="¡Reseña agrada!"
         android:textColor="#11FF00"
         android:textSize="36sp"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="134dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar8" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="330dp"
         android:layout_height="257dp"
-        app:srcCompat="@mipmap/rrrrrrr"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="237dp" />
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Reseña_agregada"
+        app:srcCompat="@mipmap/rrrrrrr" />
 
     <TextView
         android:id="@+id/Texto_gracias_comentarios"
-        android:layout_width="327dp"
-        android:layout_height="34dp"
+        android:layout_width="305dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="20dp"
         android:text="Gracias por tus comentarios"
         android:textColor="#000000"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="534dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/button_continuar_reseña"
         android:layout_width="133dp"
         android:layout_height="52dp"
+        android:layout_marginBottom="24dp"
         android:background="#00B0FF"
         android:text="Continuar"
         android:textColor="#000000"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="607dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
