--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/mobile_navigation"
         tools:layout_editor_absoluteX="-16dp"
         tools:layout_editor_absoluteY="177dp" />
+    <!--app:navGraph="@navigation/mobile_navigation"-->
+
+
 </RelativeLayout>
